--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     .accordion-menu__list {
       border-top: 1px #eee solid;
     }
-    .accordion__link {
+    .accordion-menu__link {
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -68,7 +68,7 @@
       <li class="accordion-menu__item">
         <a
           href="#menu-1"
-          class="accordion__link"
+          class="accordion-menu__link"
           data-accordion-menu>
           <span>
             Menu 1 Dropdown
@@ -84,7 +84,7 @@
           <li>
             <a
               href="#menu-2"
-              class="accordion__link"
+              class="accordion-menu__link"
               data-accordion-menu>
               <span>
                 Child Menu 2 Dropdown
@@ -107,7 +107,7 @@
         </ul>
       </li>
       <li class="accordion-menu__item">
-        <a href="#" class="accordion__link">
+        <a href="#" class="accordion-menu__link">
           Menu 2
         </a>
       </li>
