--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
       margin-left: auto;
       margin-right: auto;
     }
+
+    /* Styling */
     .accordion-menu--hidden {
       display: none;
-    }
-
-    /* Required styling */
-    .accordion-menu {}
+    } 
     .accordion-menu__list,
     .accordion-menu__sublist {
       list-style-type: none;
